Fix - Spacing Issues

--- a/src/pages/home/home.less
+++ b/src/pages/home/home.less
@@ -31,7 +31,7 @@
 
         .experience-container {
             margin-top: 50px;
-            margin-bottom: 50px;
+            margin-bottom: 60px;
         }
 
         .footer-container {
@@ -94,7 +94,7 @@
         .navbar-container {
             position: fixed;
             left: 60px;
-            margin-top: 330px;
+            margin-top: 360px;
             justify-content: flex-start;
             width: auto;
             max-width: none;
@@ -162,7 +162,7 @@
 
         .navbar-container {
             left: 120px;
-            margin-top: 405px;
+            margin-top: 445px;
         }
 
         .leftright-container {
